Updated the Postman collection and methods
I have fixed the postman collection with all the entries and also the part of the code that doesn't work as it should. Also updated part of the documentation.